devscripts (2.10.47) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Thu, 12 Feb 2009 20:23:12 +0000

devscripts (2.10.46) unstable; urgency=low

  * bts:
    + If the debbugs host in use is bugs(-*).d.o, use bugs-master.d.o when
      reporting spam to match recent changes to the BTS.
    + If -n / --no-action was given on the command line, print the URL that
      would have been used to report spam rather than sending the report.
    + Accept the new "squeeze" and "squeeze-ignore" tags.
  * debchange:
    + Add lenny-backports and lenny-volatile to the list of recognised
      distributions. (Closes: #514818)
    + Don't accept "sarge", "etch" or "lenny" as valid distributions. dak
      requires suite names (e.g. "stable") rather than codenames.
    + Modify --bpo to produce a changelog suitable for uploading to
      lenny-backports rather than etch-backports by default.  If the latest
      changelog entry is for an etch backport, a new etch-backports stanza
      will be produced instead.
  * licensecheck:
    + Remove C /* */ comments. Based on a patch by Jörg Sommer.
    + Identify another couple of forms of GPL wording. (Closes: #514811)
    + Add .xs (Perl XS files) and .vala (GNOME Vala source files) to the
      default list of files to process. (Closes: #513770, #514337)
    + Fix a bug in a regular expression which meant that .h files weren't
      included in the default list of files to search.
    + Add support for the Boost, Python and zlib/libpng licenses. Thanks,
      Cristian Greco. (Closes: #514812)
  * README.newscripts: Correct the "svn propset" syntax added in the previous
    upload.
  * debian/lintian.overrides: New file to allow us to override lintian
    thinking that the mention of snapshot.debian.net in debsnap's description
    is a reference to an upstream homepage.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Thu, 12 Feb 2009 19:19:16 +0000
